snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/maven-metadata.xml.sha256
13ea196fc8f71b1271d1ff62db75e0529f3cbf965749edccbf3d7b7f86d57634